--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,3 +213,5 @@ add_executable(clustering_4IL src/clustering_4IL.cpp)
 target_link_libraries(clustering_4IL ${catkin_LIBRARIES})
 add_executable(pickup_cluster_4IL src/pickup_cluster_4IL.cpp)
 target_link_libraries(pickup_cluster_4IL ${catkin_LIBRARIES})
+add_executable(separate_by_curvature src/separate_by_curvature.cpp)
+target_link_libraries(separate_by_curvature ${catkin_LIBRARIES})
