--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>for_IL_dataset</name>
+  <name>for_il_dataset</name>
   <version>0.0.0</version>
   <description>The 4IL_dataset package</description>
 
